Fixed a small issues with text overflowing on smaller screens

--- a/css/styling.css
+++ b/css/styling.css
@@ -107,7 +107,7 @@ a {
 }
 
 .center-content {
-    width: 1170px;
+    width: 60vw;
 
     padding-left: 10px;
     margin-left: auto;
